--- a/music-library-fe/src/index.css
+++ b/music-library-fe/src/index.css
@@ -1,13 +1,35 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+.container-fluid{
+  position: relative;
+  width: auto;
+  min-height: 100vh;
+  max-height:max-content;
+
 }
+.searchbar{
+  border-radius: 10px;
+  display:flex;
+  ;
+}
+body{
+  background-image: url(./Components/Images/Airpods.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem; 
+  border: 4px solid black;
+  border-radius: 10px;
+  background: rgb(238,174,202);
+  background: linear-gradient(180deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  text-align:center;
+  font-family: 'Arial Narrow Bold', sans-serif;
+  font-size: 1em;
+
+}
+;
