--- a/music-library-fe/src/Components/CreateSong/CreateSong.css
+++ b/music-library-fe/src/Components/CreateSong/CreateSong.css
@@ -10,9 +10,11 @@ create-container {
   
   .addSong-title {
     margin-top: 2rem;
+    font-family: 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
     margin-left: auto;
     margin-right: auto;
+    color: white;
   }
   
   .form-contain {
@@ -21,6 +23,7 @@ create-container {
   }
   
   .form-label {
+    font-family: 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
     padding-left: 1rem;
     padding-right: 1rem;
@@ -31,14 +34,15 @@ create-container {
   .button-contain {
     display: flex;
     justify-content: flex-end;
-    padding-right: 2rem;
-    padding-bottom: 2rem;
-    padding-top: -em;
+    padding-right: 1.5rem;
+    padding-bottom: 0.8rem;
+    padding-top: 0.5rem;
   }
   
   .add-button {
     border: solid rgb(245, 247, 248);
     background-color: rgb(113, 114, 163);
+    font-family: 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
-    border-radius: 10px;
+    border-radius: 5px;
   }
