--- a/music-library-fe/src/Components/DisplayMusic/DisplayMusic.css
+++ b/music-library-fe/src/Components/DisplayMusic/DisplayMusic.css
@@ -3,6 +3,7 @@
     max-width: 2000px;
     margin: auto;
     flex-direction: column;
+  
   }
   
   .table-title {
@@ -20,6 +21,8 @@
     margin-top: 3rem;
     font-weight: bold;
     margin-bottom: 0.5rem;
+    font-family: 'Arial Narrow Bold', sans-serif;
+    color: white;
   }
   
   .search-filter {
@@ -28,6 +31,8 @@
   
   .search-label {
     font-weight: bold;
+    font-family: 'Arial Narrow Bold', sans-serif;
+    color: white;
     padding-right: 0.5rem;
   }
   
@@ -36,6 +41,8 @@
     height: 32px;
     padding-left: 5px;
     border-radius: 7px;
+    
+    
   }
   
   .song-table tr,
@@ -47,15 +54,21 @@
   .header-row {
     color: rgb(19, 20, 26);
     background-color: rgb(47, 84, 163);
+    font-family: 'Arial Narrow Bold', sans-serif;
+  
   }
   
   .header-row th {
     border: solid;
     font-size: large;
+    font-family: 'Arial Narrow Bold', sans-serif;
+    color: black;
   }
   
   .display-rows {
     background-color: rgb(149, 161, 231);
+    font-family: 'Arial Narrow Bold', sans-serif;
+    color: black;
   }
   
   .display-rows td {
@@ -70,6 +83,8 @@
   .delete-button {
     border: 2px solid;
     background-color: rgb(10, 12, 7);
+    font-family: 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
     border-radius: 10px;
+    color: gray;
   }
