--- a/music-library-fe/src/Components/SearchBar/SearchBar.css
+++ b/music-library-fe/src/Components/SearchBar/SearchBar.css
@@ -1,22 +1,8 @@
-
-#navbar{
-    background: rgb(238,174,202);
-    background: linear-gradient(180deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-    display: grid;
-    width: 100%;
-    border: 4px solid black;
-    text-align: center;
-    border-radius: 10px;
-    margin-bottom: .25em;
-    
-}
-#navbarBrand{
-    color: rgb(252, 247, 247);
-    font-family:'Arial Narrow Bold', sans-serif ;
-    font-weight: 500;
-    font-size: 25px;
-
-    
+.nav-background {
+    text-align:center;
+    font-family: 'Arial Narrow Bold', sans-serif;
+    font-size: 2em;
+    margin-left: 4em;
+    color: white;
+  }
   
-    
-}
