--- a/music-library-fe/src/index.css
+++ b/music-library-fe/src/index.css
@@ -10,6 +10,7 @@
 }
 .searchbar{
   border-radius: 10px;
+  font-family: 'Arial Narrow Bold', sans-serif;
   display:flex;
   ;
 }
@@ -22,14 +23,15 @@ footer{
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 2.5rem; 
+  height: 2rem; 
   border: 4px solid black;
-  border-radius: 10px;
-  background: rgb(238,174,202);
-  background: linear-gradient(180deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  border-radius: 0px;
+  background: rgb(149, 161, 231);
+  background: rgb(149, 161, 231);
   text-align:center;
   font-family: 'Arial Narrow Bold', sans-serif;
   font-size: 1em;
 
 }
 ;
+
