--- a/music-library-fe/src/index.css
+++ b/music-library-fe/src/index.css
@@ -7,29 +7,28 @@
   min-height: 100vh;
   max-height:max-content;
 
+
 }
-.searchbar{
+.header{
   border-radius: 10px;
   font-family: 'Arial Narrow Bold', sans-serif;
-  display:flex;
-  ;
+  font-size: medium;
+  color: white;
+  text-align: center
 }
 body{
   background-image: url(./Components/Images/Airpods.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
+  font-family: 'Arial Narrow Bold', sans-serif;
+  color: white;
 }
 footer{
   position: absolute;
   bottom: 0;
-  width: 100%;
-  height: 2rem; 
-  border: 4px solid black;
-  border-radius: 0px;
-  background: rgb(149, 161, 231);
-  background: rgb(149, 161, 231);
   text-align:center;
   font-family: 'Arial Narrow Bold', sans-serif;
+  color: white;
   font-size: 1em;
 
 }
